# Manthan19

./: README.md
admin/: file.xlsx  form.html  go.mod  go.sum  main.go
admin/db/: db.go
backend/: Cargo.toml
backend/src/: main.rs  routes.rs
frontend/: 404.html  home.html  register.html  successfully resgistered.html
frontend/css/: home.css  register.css
