[package]
name = "backend"
version = "0.1.0"
authors = ["Anshul <anshulgoel151999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.5"
actix-files = "0.1.4"
mongodb = "0.3.11"
bson = "0.13"